need to rework everything due to security
