# backend/src/main/java/org/example/dto/UserLoginDto.java
@@ -1,0 +1,26 @@
+package org.example.dto;
+
+import jakarta.validation.constraints.Email;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Size;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+public class UserLoginDto {
+
+    @Size(min = 3, message = "Name must be at least 3 characters long")
+    @NotBlank(message = "Name cannot be empty")
+    private String name;
+
+
+    @NotBlank(message = "Password cannot be empty")
+    @Size(min = 8, message = "Password must be at least 8 characters long")
+    private String password;
+
+}
